# FastAPI-Poetry-TodoApp

./: pyproject.toml
nextjs-app-ui/: package-lock.json  package.json  tailwind.config.ts
nextjs-app-ui/src/app/: page.tsx
nextjs-app-ui/src/components/: AddTodo.tsx  DeleteTodo.tsx  TodoList.tsx  UpdateTodo.tsx
streamlit_app/: streamlit_app.py
tests/: test_main.py
todoapp/: .env  main.py
