[tool.poetry]
name = "fastapi-neon"
version = "0.1.0"
description = "Your project description here"
authors = ["Zia Khan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110"
uvicorn = "^0.27.1"
sqlmodel = "^0.0.16"
psycopg = "^3.1.18"
pytest = "^8.0.2"
httpx = "^0.27.0"
psycopg2 = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
